# automatizacao

./: dados_tratados.csv  pyproject.toml
.github/workflows/: automacao.yaml
projeto1/: app.py  automacao.yaml  requirements.txt
projeto1/rsconnect-python/: projeto1.json
