[project]
name = "gerenciabibliotecas"
version = "0.1.0"
description = "Gerenciamento de Bib do meu projeto"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "na"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-bcb (>=0.3.3,<0.4.0)",
    "shiny (>=1.4.0,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "plotnine (>=0.15.0,<0.16.0)",
    "rsconnect-python (>=1.27.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"